; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath6kl/extr_sdio.c_ath6kl_sdio_set_cmd53_arg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath6kl/extr_sdio.c_ath6kl_sdio_set_cmd53_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32, i32, i32)* @ath6kl_sdio_set_cmd53_arg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ath6kl_sdio_set_cmd53_arg(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %15 = load i32, i32* %9, align 4
  %16 = and i32 %15, 1
  %17 = shl i32 %16, 31
  %18 = load i32, i32* %10, align 4
  %19 = and i32 %18, 7
  %20 = shl i32 %19, 28
  %21 = or i32 %17, %20
  %22 = load i32, i32* %11, align 4
  %23 = and i32 %22, 1
  %24 = shl i32 %23, 27
  %25 = or i32 %21, %24
  %26 = load i32, i32* %12, align 4
  %27 = and i32 %26, 1
  %28 = shl i32 %27, 26
  %29 = or i32 %25, %28
  %30 = load i32, i32* %13, align 4
  %31 = and i32 %30, 131071
  %32 = shl i32 %31, 9
  %33 = or i32 %29, %32
  %34 = load i32, i32* %14, align 4
  %35 = and i32 %34, 511
  %36 = or i32 %33, %35
  %37 = load i32*, i32** %8, align 8
  store i32 %36, i32* %37, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
